--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-<p>Hello world</p>
+  <p>Hello world</p>
+  <p>This is an <b>open source</b> pull request</p>
 </body>
 
 </html>
