Added css folder + css file. Added images folder + images. Modified markup in html file.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Kenny Veys | Welcome</title>
 </head>
 <body>
@@ -15,9 +17,9 @@
       </div>
       <nav id="nav-bar">
         <ul>
-          <li><a href="#" class="nav-link">Home</a></li>
-          <li><a href="#" class="nav-link">About</a></li>
-          <li><a href="#" class="nav-link">Projects</a></li>
+          <li><i></i><a href="#" class="nav-link">Home</a></li>
+          <li><i></i><a href="#" class="nav-link">About</a></li>
+          <li><i></i><a href="#" class="nav-link">Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -39,10 +41,16 @@
 
     <section id="projects">
       <h2>Want to see some of my previous projects?</h2>
-      <div>
-        <h3>title of project</h3>
-        <img src="#" alt="Picture of project">
+      <div id="tribute">
+        <h3>Tribute Page</h3>
+        <img src="./images/TributePageThumb.PNG" alt="Thumbnail of my tribute page project">
+        <p></p>
       </div>
+      <div id="survey">
+          <h3>Survey Form</h3>
+          <img src="./images/SurveyFormThumb.PNG" alt="Thumbnail of my survey form project">
+          <p></p>
+        </div>
     </section>
 
     <footer>
