Modified and added markup to html. Added some css for the header.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <title>Kenny Veys | Welcome</title>
 </head>
 <body>
+  <header>
+    <div id="title">
+      <h1>Kenny Veys</h1>
+      <p>Junior <span>Front-End Web Developer</span></p>
+    </div>
+    <nav id="nav-bar">
+      <ul>
+        <li><i class="fas fa-home"></i><a href="#" class="nav-link">Home</a></li>
+        <li><i class="fas fa-info"></i><a href="#" class="nav-link">About</a></li>
+        <li><i class="fas fa-code-branch"></i><a href="#" class="nav-link">Projects</a></li>
+      </ul>
+    </nav>
+  </header>
+  
   <div id="main">
-    <header>
-      <div id="title">
-        <h1>Kenny Veys</h1>
-        <p>Junior Front-End Web Developer</p>
-      </div>
-      <nav id="nav-bar">
-        <ul>
-          <li><i></i><a href="#" class="nav-link">Home</a></li>
-          <li><i></i><a href="#" class="nav-link">About</a></li>
-          <li><i></i><a href="#" class="nav-link">Projects</a></li>
-        </ul>
-      </nav>
-    </header>
-
     <section id="about">
       <h2>Some information about myself:</h2>
       <article id="information">
@@ -32,6 +32,7 @@
         <p>Currently i am pursuing a bachelor's degree in Applied Informatics but aside from that, programming and keeping up with technology is also a hobby.</p>
       </article>
       <aside id="contact">
+        <h2>Contact:</h2>
         <ul>
           <li><i></i>email</li>
           <li><i></i>github</li>
@@ -52,10 +53,10 @@
           <p></p>
         </div>
     </section>
+  </div>
 
     <footer>
       <small>&copy; 2018 Kenny Veys</small>
     </footer>
-  </div>
 </body>
 </html>
