Made a change to the pictures src

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       <h2>Want to see some of my previous projects?</h2>
       <div id="tribute">
         <h3>Tribute Page</h3>
-        <img src="./images/TributePageThumb.PNG" alt="Thumbnail of my tribute page project">
+        <img src="./images/TributePageThumb.png" alt="Thumbnail of my tribute page project">
         <p></p>
       </div>
       <div id="survey">
           <h3>Survey Form</h3>
-          <img src="./images/SurveyFormThumb.PNG" alt="Thumbnail of my survey form project">
+          <img src="./images/SurveyFormThumb.png" alt="Thumbnail of my survey form project">
           <p></p>
         </div>
     </section>
