Added icons for the contact list

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <aside id="contact">
         <h2>Contact:</h2>
         <ul>
-          <li><i></i>email</li>
-          <li><i></i>github</li>
+          <li><i class="fas fa-envelope"></i>email</li>
+          <li><i class="fab fa-github-square"></i>github</li>
         </ul>
       </aside>
     </section>
