Modified html and css slightly

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <nav id="nav-bar">
       <ul>
-        <li><i class="fas fa-home"></i><a href="#" class="nav-link">Home</a></li>
+        <li><i class="fas fa-home active"></i><a href="#" class="nav-link active">Home</a></li>
         <li><i class="fas fa-info"></i><a href="#" class="nav-link">About</a></li>
         <li><i class="fas fa-code-branch"></i><a href="#" class="nav-link">Projects</a></li>
       </ul>
