Added more images, Added skills article and otherwise modified and added to existing html and css.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <nav id="nav-bar">
       <ul>
-        <li><i class="fas fa-home active"></i><a href="#" class="nav-link active">Home</a></li>
-        <li><i class="fas fa-info"></i><a href="#" class="nav-link">About</a></li>
-        <li><i class="fas fa-code-branch"></i><a href="#" class="nav-link">Projects</a></li>
+        <li><i class="fas fa-home active"></i><a href="#title" class="nav-link active">Home</a></li>
+        <li><i class="fas fa-info"></i><a href="#about" class="nav-link">About</a></li>
+        <li><i class="fas fa-code-branch"></i><a href="#projects" class="nav-link">Projects</a></li>
       </ul>
     </nav>
   </header>
@@ -28,8 +28,33 @@
       <h2>Some information about myself:</h2>
       <article id="information">
         <p>Hello there, my name is Kenny. I am a passionate 24 years old junior web developer currently learning front-end technologies.</p>
+        <i class="fas fa-arrow-down"></i>
         <p>Technology and programming fascinate me and being a professional web developer has always been a personal dream, one i am now getting closer to every day!</p>
+        <i class="fas fa-arrow-down"></i>
         <p>Currently i am pursuing a bachelor's degree in Applied Informatics but aside from that, programming and keeping up with technology is also a hobby.</p>
+      </article>
+      <article id="skills">
+        <h2>Here's a list of my skills:</h2>
+        <div class="skill">
+          <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"><img src="./images/HTML5.png" alt="A logo image of HTML5"></a>
+          <h3>HTML5</h3>
+        </div>
+        <div class="skill">
+            <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3" target="_blank"><img src="./images/css3.png" alt="A logo image of CSS3"></a>
+            <h3>CSS3</h3>
+        </div>
+        <div class="skill">
+            <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img src="./images/js.png" alt="A logo image of JavaScript"></a>
+            <h3>Javascript</h3>
+        </div>
+        <div class="skill">
+            <a href="https://en.wikipedia.org/wiki/JQuery" target="_blank"><img src="./images/jquery.png" alt="A logo image of jQuery"></a>
+            <h3>jQuery</h3>
+        </div>
+        <div class="skill">
+            <a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank"><img src="./images/bootstrap.png" alt="A logo image of Bootstrap"></a>
+            <h3>Bootstrap</h3>
+        </div>
       </article>
       <aside id="contact">
         <h2>Contact:</h2>
