fixed small spelling error in image src

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <article id="skills">
         <h2>Here's a list of my skills:</h2>
         <div class="skill">
-          <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"><img src="./images/HTML5.png" alt="A logo image of HTML5"></a>
+          <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"><img src="./images/html5.png" alt="A logo image of HTML5"></a>
           <h3>HTML5</h3>
         </div>
         <div class="skill">
