Fixed spelling error in about paragraph.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <i class="fas fa-arrow-down"></i>
         <p>Technology and programming fascinate me and being a professional web developer has always been a personal dream, one i am now getting closer to every day!</p>
         <i class="fas fa-arrow-down"></i>
-        <p>Currently i am pursuing a bachelor's degree in Applied Informatics but aside from that, programming and keeping up with technology is also a hobby.</p>
+        <p>Currently i am pursuing a bachelor's degree in Applied Informatics but aside from that, programming and keeping up with technology are also a hobby.</p>
       </article>
       <article id="skills">
         <h2>Here's a list of my skills:</h2>
