Added 2 more skills to the html page. Added images to use.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
             <a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank"><img src="./images/bootstrap.png" alt="A logo image of Bootstrap"></a>
             <h3>Bootstrap</h3>
         </div>
+        <div class="skill">
+            <a href="https://en.wikipedia.org/wiki/Git" target="_blank"><img src="./images/git.png" alt="A logo image of git"></a>
+            <h3>GIT</h3>
+        </div>
+        <div class="skill">
+            <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank"><img src="./images/octocat.png" alt="A logo image of GitHub's octocat"></a>
+            <h3>GitHub</h3>
+        </div>
       </article>
       <aside id="contact">
         <h2>Contact:</h2>
