Modified and added HTML, modified and Added css, added images for portfolio.

--- a/index.html
+++ b/index.html
@@ -65,26 +65,40 @@
         </div>
       </article>
       <aside id="contact">
-        <h2>Contact:</h2>
-        <ul>
-          <li><i class="fas fa-envelope"></i>email</li>
-          <li><i class="fab fa-github-square"></i>github</li>
-        </ul>
+        <h2>Get in touch with me:</h2>
+        <div class="contact-item">
+          <a href="mailto:kenny.veys@gmail.com"><i class="fas fa-envelope"></i>By Email</a>
+        </div>
+        <div class="contact-item">
+          <a href="https://github.com/Sneakzz" target="_blank"><i class="fab fa-github-square"></i>On Github</a>
+        </div>
       </aside>
     </section>
 
-    <section id="projects">
+    <section id="portfolio">
       <h2>Want to see some of my previous projects?</h2>
-      <div id="tribute">
-        <h3>Tribute Page</h3>
-        <img src="./images/TributePageThumb.png" alt="Thumbnail of my tribute page project">
-        <p></p>
-      </div>
-      <div id="survey">
-          <h3>Survey Form</h3>
-          <img src="./images/SurveyFormThumb.png" alt="Thumbnail of my survey form project">
-          <p></p>
+      <div id="showcase">
+        <div class="project">
+          <div class="img">
+            <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Tribute%20page/" target="_blank"><img src="./images/tribute.png" alt="A picture of my tribute page about Albert Einstein"></a>
+          </div>
+          <div class="description">
+            <h3>Tribute Page</h3>
+            <p>This tribute page is about Albert Einstein. It has a small summary of some key moments in his life.</p>
+            <a href="https://github.com/Sneakzz/FreeCodeCamp/tree/master/ResponsiveWebDesignProjects/Tribute%20page" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
+          </div>
         </div>
+        <div class="project">
+            <div class="img">
+              <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Survey%20form/" target="_blank"><img src="./images/survey.png" alt="A picture of my survey form."></a>
+            </div>
+            <div class="description">
+              <h3>Survey Form</h3>
+              <p>A simple survey asking participants how their coding journey has been so far.</p>
+              <a href="https://github.com/Sneakzz/FreeCodeCamp/tree/master/ResponsiveWebDesignProjects/Tribute%20page" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
+            </div>
+          </div>
+      </div>
     </section>
   </div>
 
