Fixed not working nav link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><i class="fas fa-home active"></i><a href="#title" class="nav-link active">Home</a></li>
         <li><i class="fas fa-info"></i><a href="#about" class="nav-link">About</a></li>
-        <li><i class="fas fa-code-branch"></i><a href="#projects" class="nav-link">Projects</a></li>
+        <li><i class="fas fa-code-branch"></i><a href="#portfolio" class="nav-link">Projects</a></li>
       </ul>
     </nav>
   </header>
