--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     </div>
     <nav id="nav-bar">
       <ul>
-        <li><i class="fas fa-home active"></i><a href="#title" class="nav-link active">Home</a></li>
-        <li><i class="fas fa-info"></i><a href="#about" class="nav-link">About</a></li>
-        <li><i class="fas fa-code-branch"></i><a href="#portfolio" class="nav-link">Projects</a></li>
+        <li><a href="#title" class="nav-link active"><i class="fas fa-home active"></i>Home</a></li>
+        <li><a href="#about" class="nav-link"><i class="fas fa-info"></i>About</a></li>
+        <li><a href="#portfolio" class="nav-link"><i class="fas fa-code-branch"></i>Projects</a></li>
       </ul>
     </nav>
+    <div class="clr"></div>
   </header>
   
   <div id="main">
