--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div id="showcase">
         <div class="project">
           <div class="img">
-            <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Tribute%20page/" target="_blank"><img src="./images/tribute.png" alt="A picture of my tribute page about Albert Einstein"></a>
+            <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Tribute%20page/" target="_blank"><img src="./images/Albertpng.png" alt="A picture of my tribute page about Albert Einstein"></a>
           </div>
           <div class="description">
             <h3>Tribute Page</h3>
@@ -91,7 +91,7 @@
         </div>
         <div class="project">
             <div class="img">
-              <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Survey%20form/" target="_blank"><img src="./images/survey.png" alt="A picture of my survey form."></a>
+              <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Survey%20form/" target="_blank"><img src="./images/survey2.jpg" alt="A picture of my survey form."></a>
             </div>
             <div class="description">
               <h3>Survey Form</h3>
