--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="project">
             <div class="img">
-              <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Survey%20form/" target="_blank"><img src="./images/survey2.jpg" alt="A picture of my survey form."></a>
+              <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Survey%20form/" target="_blank"><img src="./images/Survey2.jpg" alt="A picture of my survey form."></a>
             </div>
             <div class="description">
               <h3>Survey Form</h3>
