Added detailing image to the header and added css.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>Kenny Veys</h1>
       <p>Junior <span>Front-End Web Developer</span></p>
     </div>
+    <img src="./images/Header-Wave.png" alt="">
     <nav id="nav-bar">
       <ul>
         <li><a href="#title" class="nav-link active"><i class="fas fa-home active"></i>Home</a></li>
