Made some changes from feedback to html and css.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div id="title">
       <h1>Kenny Veys</h1>
-      <p>Junior <span>Front-End Web Developer</span></p>
+      <p>Front-End Web Developer</p>
     </div>
     <img src="./images/Header-Wave.png" alt="">
     <nav id="nav-bar">
@@ -30,7 +30,7 @@
     <section id="about">
       <h2>Some information about myself:</h2>
       <article id="information">
-        <p>Hello there, my name is Kenny. I am a passionate 24 years old junior web developer currently learning front-end technologies.</p>
+        <p>Hello there, my name is Kenny. I am a passionate 24 year old web developer currently learning front-end technologies.</p>
         <i class="fas fa-arrow-down"></i>
         <p>Technology and programming fascinate me and being a professional web developer has always been a personal dream, one i am now getting closer to every day!</p>
         <i class="fas fa-arrow-down"></i>
