Add image and css for new portfolio entry

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
           <div class="description">
             <h3>Tribute Page</h3>
-            <p>This tribute page is about Albert Einstein. It has a small summary of some key moments in his life.</p>
+            <p>This tribute page is about Albert Einstein. It has a small summary of some key moments in his life. Built using just HTML5 and CSS3</p>
             <a href="https://github.com/Sneakzz/FreeCodeCamp/tree/master/ResponsiveWebDesignProjects/Tribute%20page" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
           </div>
         </div>
@@ -97,8 +97,18 @@
             </div>
             <div class="description">
               <h3>Survey Form</h3>
-              <p>A simple survey asking participants how their coding journey has been so far.</p>
+              <p>A simple survey asking participants how their coding journey has been so far. Built using HTML5 and CSS3</p>
               <a href="https://github.com/Sneakzz/FreeCodeCamp/tree/master/ResponsiveWebDesignProjects/Tribute%20page" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="img">
+              <a href="https://sneakzz.github.io/Practical-JS/Index.html" target="_blank"><img src="./images/TodolistThumb.png" alt="A picture of my survey form."></a>
+            </div>
+            <div class="description">
+              <h3>Simple TodoList</h3>
+              <p>Minimalistic UI Todolist built using only HTML5, CSS3 and JavaScript!</p>
+              <a href="https://github.com/Sneakzz/Practical-JS" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
             </div>
           </div>
       </div>
