Add html and css for wip label

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             </div>
         </div>
         <div class="project">
+          <p class="wip">WIP</p>
             <div class="img">
               <a href="https://sneakzz.github.io/Practical-JS/Index.html" target="_blank"><img src="./images/TodolistThumb.png" alt="A picture of my survey form."></a>
             </div>
