--- a/index.html
+++ b/index.html
@@ -1,122 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/main.js"></script>
-  <title>Kenny Veys | Welcome</title>
+  <title>Personal Portfolio</title>
 </head>
+
 <body>
-  <header>
-    <div id="title">
-      <h1>Kenny Veys</h1>
-      <p>Front-End Web Developer</p>
-    </div>
-    <img src="./images/Header-Wave.png" alt="">
-    <nav id="nav-bar">
-      <ul>
-        <li><a href="#title" class="nav-link active"><i class="fas fa-home active"></i>Home</a></li>
-        <li><a href="#about" class="nav-link"><i class="fas fa-info"></i>About</a></li>
-        <li><a href="#portfolio" class="nav-link"><i class="fas fa-code-branch"></i>Projects</a></li>
+  <main>
+    <!-- Navigation -->
+    <nav>
+      <ul id="navbar">
+        <div class="container">
+          <li><a href="#welcome-section">About</a></li>
+          <li><a href="#projects">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </div>
       </ul>
     </nav>
-    <div class="clr"></div>
-  </header>
-  
-  <div id="main">
-    <section id="about">
-      <h2>Some information about myself:</h2>
-      <article id="information">
-        <p>Hello there, my name is Kenny. I am a passionate 24 year old web developer currently learning front-end technologies.</p>
-        <i class="fas fa-arrow-down"></i>
-        <p>Technology and programming fascinate me and being a professional web developer has always been a personal dream, one i am now getting closer to every day!</p>
-        <i class="fas fa-arrow-down"></i>
-        <p>Currently i am pursuing a bachelor's degree in Applied Informatics but aside from that, programming and keeping up with technology are also a hobby.</p>
-      </article>
-      <article id="skills">
-        <h2>Here's a list of my skills:</h2>
-        <div class="skill">
-          <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank"><img src="./images/html5.png" alt="A logo image of HTML5"></a>
-          <h3>HTML5</h3>
-        </div>
-        <div class="skill">
-            <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3" target="_blank"><img src="./images/css3.png" alt="A logo image of CSS3"></a>
-            <h3>CSS3</h3>
-        </div>
-        <div class="skill">
-            <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img src="./images/js.png" alt="A logo image of JavaScript"></a>
-            <h3>Javascript</h3>
-        </div>
-        <div class="skill">
-            <a href="https://en.wikipedia.org/wiki/JQuery" target="_blank"><img src="./images/jquery.png" alt="A logo image of jQuery"></a>
-            <h3>jQuery</h3>
-        </div>
-        <div class="skill">
-            <a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank"><img src="./images/bootstrap.png" alt="A logo image of Bootstrap"></a>
-            <h3>Bootstrap</h3>
-        </div>
-        <div class="skill">
-            <a href="https://en.wikipedia.org/wiki/Git" target="_blank"><img src="./images/git.png" alt="A logo image of git"></a>
-            <h3>GIT</h3>
-        </div>
-        <div class="skill">
-            <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank"><img src="./images/octocat.png" alt="A logo image of GitHub's octocat"></a>
-            <h3>GitHub</h3>
-        </div>
-      </article>
-      <aside id="contact">
-        <h2>Get in touch with me:</h2>
-        <div class="contact-item">
-          <a href="mailto:kenny.veys@gmail.com"><i class="fas fa-envelope"></i>By Email</a>
-        </div>
-        <div class="contact-item">
-          <a href="https://github.com/Sneakzz" target="_blank"><i class="fab fa-github-square"></i>On Github</a>
-        </div>
-      </aside>
-    </section>
 
-    <section id="portfolio">
-      <h2>Want to see some of my previous projects?</h2>
-      <div id="showcase">
-        <div class="project">
-          <div class="img">
-            <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Tribute%20page/" target="_blank"><img src="./images/Albertpng.png" alt="A picture of my tribute page about Albert Einstein"></a>
-          </div>
-          <div class="description">
-            <h3>Tribute Page</h3>
-            <p>This tribute page is about Albert Einstein. It has a small summary of some key moments in his life. Built using just HTML5 and CSS3</p>
-            <a href="https://github.com/Sneakzz/FreeCodeCamp/tree/master/ResponsiveWebDesignProjects/Tribute%20page" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
-          </div>
+    <!-- Section: Welcome -->
+    <section id="welcome-section">
+      <div class="container">
+        <div id="welcome-content">
+          <h1>Hello, i'm Kenny.</h1>
+          <p>Web Developer</p>
         </div>
-        <div class="project">
-            <div class="img">
-              <a href="https://sneakzz.github.io/FreeCodeCamp/ResponsiveWebDesignProjects/Survey%20form/" target="_blank"><img src="./images/Survey2.jpg" alt="A picture of my survey form."></a>
-            </div>
-            <div class="description">
-              <h3>Survey Form</h3>
-              <p>A simple survey asking participants how their coding journey has been so far. Built using HTML5 and CSS3</p>
-              <a href="https://github.com/Sneakzz/FreeCodeCamp/tree/master/ResponsiveWebDesignProjects/Tribute%20page" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
-            </div>
-        </div>
-        <div class="project">
-          <p class="wip">WIP</p>
-            <div class="img">
-              <a href="https://sneakzz.github.io/Practical-JS/Index.html" target="_blank"><img src="./images/TodolistThumb.png" alt="A picture of my survey form."></a>
-            </div>
-            <div class="description">
-              <h3>Simple TodoList</h3>
-              <p>Minimalistic UI Todolist built using only HTML5, CSS3 and JavaScript!</p>
-              <a href="https://github.com/Sneakzz/Practical-JS" target="_blank"><i class="fab fa-github-square"></i>View on github</a>
-            </div>
-          </div>
       </div>
     </section>
-  </div>
+
+    <section id="projects">
+      <div class="container">
+        <h2>These are some of my projects..</h2>
+        <div id="project-list">
+          <a href="https://sneakzz.github.io/FreeCodeCamp/Responsive%20Web%20Design%20Projects/Product%20Landing%20Page/" target="_blank" class="project-tile">
+            <div class="card-image">
+              <img src="./img/productPage2.png" alt="">
+            </div>
+            <div class="project-title">
+              <h3>Product Landing Page</h3>
+            </div>
+            <div class="card-labels">
+
+            </div>
+          </a>
+
+          <a href="https://sneakzz.github.io/FreeCodeCamp/Responsive%20Web%20Design%20Projects/Technical%20Documentation%20Page/" target="_blank" class="project-tile">
+            <div class="card-image">
+              <img src="./img/techDocPage2.png" alt="">
+            </div>
+            <div class="project-title">
+              <h3>Technical Documentation Page</h3>
+            </div>
+            <div class="card-labels">
+
+            </div>
+          </a>
+
+          <a href="https://sneakzz.github.io/Practical-JS/Index.html" target="_blank" class="project-tile">
+            <div class="card-image">
+              <img src="./img/todoList2.png" alt="">
+            </div>
+            <div class="project-title">
+              <h3>Todo List</h3>
+            </div>
+            <div class="card-labels">
+              <span class="wip-label">Wip</span>
+            </div>
+          </a>
+
+          <a href="https://sneakzz.github.io/Front-End-Projects/StudentList/" target="_blank" class="project-tile">
+            <div class="card-image">
+              <img src="./img/classRegister2.png" alt="">
+            </div>
+            <div class="project-title">
+              <h3>Class register</h3>
+            </div>
+            <div class="card-labels">
+              <span class="wip-label">Wip</span>
+            </div>
+          </a>
+
+          <a href="https://sneakzz.github.io/FreeCodeCamp/Responsive%20Web%20Design%20Projects/Tribute%20page/" target="_blank" class="project-tile">
+            <div class="card-image">
+              <img src="./img/tributePage2.png" alt="">
+            </div>
+            <div class="project-title">
+              <h3>Tribute Page</h3>
+            </div>
+            <div class="card-labels">
+            </div>
+          </a>
+
+        </div>
+        <a id="profile-link" target="_blank" href="https://github.com/Sneakzz">See more</a>
+      </div>
+    </section>
+
+    <!-- Section: Contact -->
+    <section id="contact">
+      <div class="container">
+        <div id="contact-text">
+          <h1>Let's work together...</h1>
+          <p>How do you like your coffee?</p>
+        </div>
+
+        <div id="contact-links">
+          <a href="https://github.com/Sneakzz" target="_blank">GitHub</a>
+          <a href="mailto:kenny.veys@gmail.com" target="_blank">Send a mail</a>
+          <a href="tel:555-555-5555" target="_blank">Call me</a>
+        </div>
+      </div>
+    </section>
+
     <footer>
-        <small>&copy; 2018 Kenny Veys</small>
+      <div class="container">
+        <h4>Created by Kenny Veys, 2018 &copy;</h4>
+      </div>
     </footer>
+
+  </main>
+
+
+  <!-- <script src=" https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
+
 </html>
