Modify welcome section in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="container">
         <div id="welcome-content">
           <h1>Hello, i'm Kenny.</h1>
-          <p>Web Developer</p>
+          <p>Web/Software Developer</p>
         </div>
       </div>
     </section>
