--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
         <h2>These are some of my projects..</h2>
 
         <div id="project-list">
+            <a href="https://github.com/Sneakzz/ATM-Machine" target="_blank" class="project-tile">
+              <div class="card-image">
+                <img src="./img/atmMachine.PNG" alt="">
+              </div>
+              <div class="project-title">
+                <h3>Java Atm Machine</h3>
+              </div>
+              <div class="card-labels">
+  
+              </div>
+            </a>
+
           <a href="https://sneakzz.github.io/FreeCodeCamp/Responsive%20Web%20Design%20Projects/Product%20Landing%20Page/" target="_blank" class="project-tile">
             <div class="card-image">
               <img src="./img/productPage2.png" alt="">
