--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Kenny Veys - Web/Software Developer</title>
+  <title>Mdmirajul Karim - Currently learning Web Development</title>
 </head>
 
 <body>
@@ -26,8 +26,8 @@
     <section id="welcome-section">
       <div class="container">
         <div id="welcome-content">
-          <h1>Hello, i'm Kenny.</h1>
-          <p>Web/Software Developer</p>
+          <h1>Hello, i'm mdmirajul karim.</h1>
+          <p>Currently learning  Web Development stuffs</p>
         </div>
       </div>
     </section>
@@ -37,7 +37,7 @@
         <h2>These are some of my projects..</h2>
 
         <div id="project-list">
-            <a href="https://github.com/Sneakzz/ATM-Machine" target="_blank" class="project-tile">
+            <a href="" target="_blank" class="project-tile">
               <div class="card-image">
                 <img src="./img/atmMachine.PNG" alt="">
               </div>
@@ -49,7 +49,7 @@
               </div>
             </a>
 
-          <a href="https://sneakzz.github.io/FreeCodeCamp/Responsive%20Web%20Design%20Projects/Product%20Landing%20Page/" target="_blank" class="project-tile">
+          <a href="" target="_blank" class="project-tile">
             <div class="card-image">
               <img src="./img/productPage2.png" alt="">
             </div>
@@ -61,7 +61,7 @@
             </div>
           </a>
 
-          <a href="https://sneakzz.github.io/FreeCodeCamp/Responsive%20Web%20Design%20Projects/Technical%20Documentation%20Page/" target="_blank" class="project-tile">
+          <a href="" target="_blank" class="project-tile">
             <div class="card-image">
               <img src="./img/techDocPage2.png" alt="">
             </div>
@@ -73,7 +73,7 @@
             </div>
           </a>
 
-          <a href="https://sneakzz.github.io/Practical-JS/Index.html" target="_blank" class="project-tile">
+          <a href="" target="_blank" class="project-tile">
             <div class="card-image">
               <img src="./img/todoList2.png" alt="">
             </div>
@@ -85,7 +85,7 @@
             </div>
           </a>
 
-          <a href="https://sneakzz.github.io/Front-End-Projects/StudentList/" target="_blank" class="project-tile">
+          <a href="" target="_blank" class="project-tile">
             <div class="card-image">
               <img src="./img/classRegister2.png" alt="">
             </div>
@@ -97,7 +97,7 @@
             </div>
           </a>
 
-          <a href="https://sneakzz.github.io/FreeCodeCamp/Responsive%20Web%20Design%20Projects/Tribute%20page/" target="_blank" class="project-tile">
+          <a href="" target="_blank" class="project-tile">
             <div class="card-image">
               <img src="./img/tributePage2.png" alt="">
             </div>
@@ -109,7 +109,7 @@
           </a>
 
         </div>
-        <a id="profile-link" target="_blank" href="https://github.com/Sneakzz">See more</a>
+        <a id="profile-link" target="_blank" href="">See more</a>
       </div>
     </section>
 
@@ -122,16 +122,16 @@
         </div>
 
         <div id="contact-links">
-          <a href="https://github.com/Sneakzz" target="_blank">GitHub</a>
-          <a href="mailto:kenny.veys@gmail.com" target="_blank">Send a mail</a>
-          <a href="tel:555-555-5555" target="_blank">Call me</a>
+          <a href="https://github.com/mdmirajulkarim" target="_blank">GitHub</a>
+          <a href="" target="_blank">Send a mail</a>
+          <a href="" target="_blank">Call me</a>
         </div>
       </div>
     </section>
 
     <footer>
       <div class="container">
-        <h4>Created by Kenny Veys, 2018 &copy;</h4>
+        <h4>Created by mdmirajul karim, 2019&copy;</h4>
       </div>
     </footer>
 
